--- a/vignettes_highres/Simulations.Rmd
+++ b/vignettes_highres/Simulations.Rmd
@@ -45,20 +45,20 @@ The function do not provide every possibilities offered by PedigreeSim software.
 ```{r}
 # For outcrossing population
 run_pedsim(chromosome = "Chr1", n.marker = 154, tot.size.cm = 100, centromere = 50,
-            n.ind = 200, mk.types = c("A1", "A2", "B3.7", "D1.9", "D1.10", "D2.14", "D2.15"),
-            n.types = rep(22,7), pop = "F1", path.pedsim = "/home/rstudio/work/",
-            name.mapfile = "mapfile.map", name.founderfile="founderfile.gen",
-            name.chromfile="sim.chrom", name.parfile="sim.par",
-            name.out="sim_out")
+           n.ind = 200, mk.types = c("A1", "A2", "B3.7", "D1.9", "D1.10", "D2.14", "D2.15"),
+           n.types = rep(22,7), pop = "F1", path.pedsim = "/home/rstudio/work/",
+           name.mapfile = "mapfile.map", name.founderfile="founderfile.gen",
+           name.chromfile="sim.chrom", name.parfile="sim.par",
+           name.out="sim_out")
 
 # For F2 population
 run_pedsim(chromosome = c("Chr1", "Chr2"), n.marker = c(75, 75), 
            tot.size.cm = c(100,100), centromere = c(50,50),
-            n.ind = 200, mk.types = c("A.H.B","C.A", "D.B"),
-            n.types = rep(50,3), pop = "F2", path.pedsim = "/home/rstudio/work/",
-            name.mapfile = "mapfile_f2.map", name.founderfile="founderfile_f2.gen",
-            name.chromfile="sim_f2.chrom", name.parfile="sim_f2.par",
-            name.out="sim_f2")
+           n.ind = 200, mk.types = c("A.H.B","C.A", "D.B"),
+           n.types = rep(50,3), pop = "F2", path.pedsim = "/home/rstudio/work/",
+           name.mapfile = "mapfile_f2.map", name.founderfile="founderfile_f2.gen",
+           name.chromfile="sim_f2.chrom", name.parfile="sim_f2.par",
+           name.out="sim_f2")
 
 ```
 
@@ -84,7 +84,6 @@ pedsim2raw(genofile = "sim_f2_genotypes.dat", cross="f2 intercross", parent1 = "
 onemap.obj <- read_onemap("sim_f2.example.raw")
 
 plot(onemap.obj)
-
 ```
 
 # Simulate VCF file
@@ -96,7 +95,7 @@ The same output file from PedigreeSim, the `genotypes.dat` can be used to simula
 pedsim2vcf(inputfile = "sim_out_genotypes.dat", 
            map.file = "mapfile.map", 
            chrom.file = "sim.chrom", 
-           out.file = "simu.vcf",
+           out.file = "simu_out.vcf",
            miss.perc = 0, 
            counts = TRUE, 
            mean.depth = 100, 
@@ -112,7 +111,7 @@ pedsim2vcf(inputfile = "sim_out_genotypes.dat",
            disper.par=2)
 
 library(vcfR)
-vcfR_out.obj <- read.vcfR("simu.vcf")
+vcfR_out.obj <- read.vcfR("simu_out.vcf")
 onemap_out.obj <- onemap_read_vcfR(vcfR.object = vcfR_out.obj, cross = "outcross", parent1 = "P1", parent2 = "P2")
 
 plot(onemap_out.obj, all=F)
@@ -121,11 +120,11 @@ plot(onemap_out.obj, all=F)
 # Just a example to remember that dominant markers are not supported by this function
 run_pedsim(chromosome = c("Chr1", "Chr2"), n.marker = c(75, 75), 
            tot.size.cm = c(100,100), centromere = c(50,50),
-            n.ind = 200, mk.types = c("A.H.B"),
-            n.types = 150, pop = "F2", path.pedsim = "/home/rstudio/work/",
-            name.mapfile = "mapfile_f2.map", name.founderfile="founderfile_f2.gen",
-            name.chromfile="sim_f2.chrom", name.parfile="sim_f2.par",
-            name.out="sim_f2")
+           n.ind = 200, mk.types = c("A.H.B"),
+           n.types = 150, pop = "F2", path.pedsim = "/home/rstudio/work/",
+           name.mapfile = "mapfile_f2.map", name.founderfile="founderfile_f2.gen",
+           name.chromfile="sim_f2.chrom", name.parfile="sim_f2.par",
+           name.out="sim_f2")
 
 pedsim2vcf(inputfile = "sim_f2_genotypes.dat", 
            map.file = "mapfile_f2.map", 
@@ -169,7 +168,6 @@ create_depths_profile(onemap.obj = onemap_out.obj,
                       alpha = 0.1,
                       rds.file = "depths_out.rds")
 
-
 # For f2 intercross population
 create_depths_profile(onemap.obj = onemap_f2.obj,
                       vcfR.object = vcfR_f2.obj, 
@@ -183,10 +181,7 @@ create_depths_profile(onemap.obj = onemap_f2.obj,
                       GTfrom = "vcf", 
                       alpha = 0.1,
                       rds.file = "depths_f2.rds")
-
 ```
-
-
 
 ## Reestimate genotypes
 
@@ -200,13 +195,12 @@ If you choose to simulate allele counts in `pedsim2vcf` it is also possible to r
 
 OneMap 3.0 have three options to define error probability in HMM emission phase. The default method is consider a global error rate for every genotype $10^{-5}$. Until this present version, only this procedure was implemented. Now, with the function `create_probs`, we offer the option to change the global error rate (`global_error` argument), or consider a error rate by genotype (`genotypes_errors`) or a genotype probability for each genotype (`genotypes_probs`).
 
-## Parei aqui! alterar create_probs para misturar global erro com os dois anteriores e adaptar a polyRAD e supermassa com essa alteração
-rodar tres familias com probs, errors e errors + global erro de 0.01 para ver qual é melhor - verificar qual o metodo utilizado nas cinco familias q ja foram rodadas adicionar uma simulação variando o erro global para verificar diferença nos haplotipos depois
+rodar tres familias com probs, errors e global erro de 0.05 para ver qual é melhor - verificar qual o metodo utilizado nas cinco familias q ja foram rodadas, adicionar uma simulação variando o erro global para verificar diferença nos haplotipos depois
 
 
 ### With updog
 
-The function `updog_genotype` make interface of OneMap with Updog, this time to perform the genotype calling. 
+The function `updog_genotype` make interface of OneMap with Updog to perform the genotype calling. 
 
 ```{r}
 onemap_geno.updog <- updog_genotype(vcfR.object=vcfR_out.obj, 
@@ -217,38 +211,82 @@ onemap_geno.updog <- updog_genotype(vcfR.object=vcfR_out.obj,
                                     f1=NULL,
                                     recovering = FALSE,
                                     mean_phred = 20, 
-                                    cores = 2,
+                                    cores = 4,
                                     depths = NULL,
                                     global_error = NULL,
-                                    use_genotypes_errors = FALSE,
-                                    use_genotypes_probs = TRUE)
+                                    use_genotypes_errors = TRUE,
+                                    use_genotypes_probs = FALSE)
 
-multi <- colnames(onemap_geno.updog$geno)[which(!(onemap_geno.updog$segr.type %in% c("B3.7", "D1.10", "D2.15")))]
-onemaps <- split_onemap(onemap_geno.updog, multi)
-onemaps
-
-create_depths_profile(onemap.obj = onemaps[[1]], 
+create_depths_profile(onemap.obj = onemap_geno.updog, 
                       vcfR.object = vcfR_out.obj, 
                       parent1 = "P1",
                       parent2 = "P2",
-                      vcf.par = "AD", recovering = FALSE, GTfrom = "prob") # xabu na segregação, verificar nos outros
+                      vcf.par = "AD", 
+                      recovering = FALSE, 
+                      GTfrom = "vcf") 
 
 ```
 
-
-
-
 ### With polyRAD
+
+The function `polyRAD_genotype` make interface of OneMap with polyRAD to perform the genotype calling.
+
+```{r}
+onemap_geno.polyRAD <- polyRAD_genotype(vcf="simu_out.vcf", 
+                                        onemap.obj = onemap_out.obj,
+                                        parent1="P1",
+                                        parent2="P2",
+                                        f1="F1",
+                                        crosstype="outcross",
+                                        global_error = NULL,
+                                        use_genotypes_errors = TRUE,
+                                        use_genotypes_probs = FALSE)
+
+
+create_depths_profile(onemap.obj = onemap_geno.polyRAD, 
+                      vcfR.object = vcfR_out.obj, 
+                      parent1 = "P1",
+                      parent2 = "P2",
+                      vcf.par = "AD", 
+                      recovering = FALSE, 
+                      GTfrom = "vcf") 
+```
 
 ### With supermassa
 
+The function `supermassa_genotype` make interface of OneMap with supermassa to perform the genotype calling.
+
+```{r}
+library(supermassa4onemap)
+onemap_geno.supermassa <- supermassa_genotype(vcf="simu_out.vcf", 
+                                              onemap.obj = onemap_out.obj,
+                                              parent1="P1",
+                                              parent2="P2",
+                                              f1="F1",
+                                              crosstype="outcross",
+                                              global_error = NULL,
+                                              use_genotypes_errors = TRUE,
+                                              use_genotypes_probs = FALSE)
+
+create_depths_profile(onemap.obj = onemap_geno.supermassa, 
+                      vcfR.object = vcfR_out.obj, 
+                      parent1 = "P1",
+                      parent2 = "P2",
+                      vcf.par = "AD", 
+                      recovering = FALSE, 
+                      GTfrom = "vcf") 
+```
+
+
 ## Example test
+
+Insert test with pedsim2vcf here
 
 
 
 # Simulate Illumina reads
 
-This one is a bit more complex and the its tools is stored in the github repository [onemap_workflows](https://github.com/Cristianetaniguti/onemap_workflows). Please, access [it](https://github.com/Cristianetaniguti/onemap_workflows) to more information.
+This one is a bit more complex and the its tools is stored in the github repository [onemap_workflows](https://github.com/Cristianetaniguti/onemap_workflows). Please, access [it](https://github.com/Cristianetaniguti/onemap_workflows) for more information.
 
 
 ### Remove generated files
